2006-01-03 Rob Janes <janes.rob@gmail.com>
	* added support for classes/EventLogging.php.
	* modified include/common.php to pull in the EventLogging class
	* modified index.php to kick start error logging with minimal setup.
	  I didn't setup a css for this, so any errors are simply pushed out
	  when the logging channel is destructed.
	* other changes to include/common.php - a host of utility functions,
	  prefixed with "cmn" to avoid namespace collision.
	* stock config.php, added global $AVAIL_LOCALE_ARRAY, cause of my change
	  to include/common.php, wrapping the require_once in a function.

2006-01-04 Pascal Leclerc <isf@plec.ca>
    * install.php : New security validation and small bugs fix in admin account creation

2006-01-02 Rob Janes <janes.rob@gmail.com>
	* split static stylesheet.css from smarty template stuff.
	  local_content/default/stylesheet.css has only smarty template stuff.
	  local_content/common/stylesheet.css has all the rest.
	* classes/MainUI.php changed to <link ...> the common stylesheet.css, while
	  still smarty fetching the templated stylesheet.
	* classes/SmartyWifidog.php changed to set a smarty template variable so
	  that the templating stylesheet could work.

2005-12-29 François Proulx <francois.proulx@gmail.com>
	* Integrating Philippe's code for User class
	* This build needs extensive testing please
	* E-mail blacklisting (Mail class)
	
2005-12-29 François Proulx <francois.proulx@gmail.com>
	* Added Aidan's file_exists_incpath function to Dependencies class
	* Translated and standardized most of PostgreSQL abstraction class.
	* Removed blank lines at end of many files
	* Tested the new Phlickr package, which fixes URL on Flickr
	
2005-12-28 Max Horváth <max.horvath@maxspot.de>
	* Removed BASEPATH define from source - resulting in a better require-overview
	* speed improvement of 7% by optimizing Dependencies class
	* improved documentation of content classes

2005-12-26 François Proulx <francois.proulx@gmail.com>